# hydroottawa

./: .gitignore  Cargo.toml  README.md
hydroottawa/: Cargo.toml
hydroottawa-api/: Cargo.toml
hydroottawa-api/src/: api.rs  auth.rs  error.rs  lib.rs  types.rs
hydroottawa/src/: display.rs  lib.rs  main.rs  mqtt_pub.rs
src/: api_types.rs  lib.rs  main.rs
