[package]
name = "hydroottawa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-cognito-srp = "0.2"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
log = "0.4.29"
reqwest = { version = "0.13", features = ["form", "json", "rustls"] }
rstaples = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48", features = ["full"] }

[lints.clippy]
arithmetic_side_effects = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
needless_pass_by_ref_mut = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
