[workspace]
resolver = "2"
members = [
  "hydroottawa",
  "hydroottawa-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
aws-cognito-srp = "0.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
log = "0.4"
reqwest = { version = "0.13", features = ["form", "json", "rustls"] }
rstaples = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
needless_pass_by_ref_mut = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
