[package]
name = "hydroottawa-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aws-cognito-srp.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
